Fix icon position on mobile mode

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -170,6 +170,9 @@ html, body {
   width: 300px;
   display: flex;
   justify-content: center;
+}
 
+.zoom-to-location{
+  left: 310px;
 }
 }
